CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(KZ2)

SET(CPACK_PACKAGE_FILE_NAME "KZ2")
SET(CPACK_GENERATOR "TGZ")
INCLUDE(CPack)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
ADD_SUBDIRECTORY(src)

INSTALL(FILES CMakeLists.txt DESTINATION .)
INSTALL(FILES CHANGES.TXT README.txt
        DESTINATION .)
INSTALL(FILES images/scene_l.png images/scene_r.png
        DESTINATION images)
